--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "sass": "^1.77.4",
     "swiper": "^11.1.4",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
