--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "test": "vitest --dom",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "happy-dom": "^14.12.0",
     "sass": "^1.77.4",
     "swiper": "^11.1.4",
     "vue": "^3.4.21",
@@ -16,6 +18,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.0"
+    "@vue/test-utils": "^2.4.6",
+    "vite": "^5.2.0",
+    "vitest": "^1.6.0"
   }
 }
