--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "vitest --dom",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
   },
   "dependencies": {
     "happy-dom": "^14.12.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/test-utils": "^2.4.6",
+    "prettier": "^3.3.1",
     "vite": "^5.2.0",
     "vitest": "^1.6.0"
   }
