--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "happy-dom": "^14.12.0",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
     "sass": "^1.77.4",
     "swiper": "^11.1.4",
     "vue": "^3.4.21",
